--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
+    "openai": "^4.20.1",
     "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
-} 
+}
